# sacmi-image-recognition

./: Dockerfile  Makefile  pyproject.toml
fastapi_serverless_starter/: main.py
fastapi_serverless_starter/image_recognition/: encoding_builder.py  image_recognizer.py
fastapi_serverless_starter/routers/: img_recognition_api.py
fastapi_serverless_starter/services/: S3_service.py
